--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,113 @@
-body{
-    position: relative;
-    width: 1440px;
-    height: 1024px;
-    background: #F3F5FC;
-}
+*{
 
-.input{
-    position: absolute;
-    width: 577px;
-    height: 48px;
-    left: 240px;
-    top: 168px;
-    border: none;
+    background: #F3F5FC;
     font-family: 'Inter';
-    font-style: normal;
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
-    outline: none;
-    background-color: #F3F5FC;
-    color: #0A3871;
+    overflow: hidden;
+
+
+}
+
+.logo{
+    padding-top: 10px;
+    margin-left: 10px;
+    width: 10%;
+}
+
+main{
+    display: flex;
+    margin-bottom: 50px;
+    margin-left: 80px;
 }
 
 
+.text-area{
+    border: none;
+    color: #0A3871;
+    margin-top: 90px;
+    text-transform: lowercase;
+}
 
+::placeholder{
+    color:#0A3871;
+}
+
+.text-area:focus{
+    outline: none;
+}
+
+.mensaje{
+    background: white;
+    background-image: url("/images/Muñeco.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    border-radius: 24px;
+    color: #0A3871;
+    margin-left: 98px;
+    margin-top: 20px;
+    padding-left: 20px;
+    position: fixed;
+    position: absolute;
+    width: 400px;
+    height: 744px;
+    left: 1000px;
+    top: 40px;
+}
+
+.mensajes:focus{
+    outline: none;
+}
+
+.botones{
+    display: flex;
+    margin-top: 18px;
+    position: absolute;
+    left: 240px;
+    top: 685px;
+}
+
+.btn-encriptar{
+    background-color: #0A3871;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    color: white;
+    cursor: pointer;
+    height: 67px;
+    width: 328px;
+    margin-right: 1em;
+}
+
+.btn-desencriptar{
+    background: #D8DFE8;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    color: #0A3871;
+    cursor: pointer;
+    height: 67px;
+    width: 328px;
+}
+
+.copiar{
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    color:#0A3871;
+    cursor: pointer;
+    height: 67px;
+    margin-left: 520px;
+    margin-top: 600px;
+    position: absolute;
+    width: 336px;
+
+}
+
+
+.informacion{
+color:#495057;
+font-size: 18px;
+position: absolute;
+left: 240px;
+top: 600px;
+}
